--- a/src/app/features/driver-list/driver-list.component.html
+++ b/src/app/features/driver-list/driver-list.component.html
@@ -88,7 +88,7 @@
                                 'bg-label-danger': driver.status === 'EXPIRING'}">{{ driver.status }}</span>
 
                             <td class="text-capitalize text-center">
-                              <div class="dropdown filter-dropdown">
+                              <div class="dropdown filter-dropdown" style="position: fixed;">
                                 <span class="dropdown-toggle font-16 px-3" type="button" id="dropdownMenuButton23"
                                   data-bs-toggle="dropdown" aria-expanded="false"><i
                                     class="fa fa-ellipsis-v"></i></span>
@@ -140,9 +140,6 @@
 <!-- End Default Tabs -->
 
 
-
-
-
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
   <div class="text-dark text-center">
@@ -152,8 +149,6 @@
 
 </footer>
 <!-- End Footer -->
-
-
 
 <div class="modal fade" id="ExtralargeModalDelete" style="display: none;" aria-hidden="true">
   <div class="modal-dialog modal-md modal-dialog-centered">
@@ -174,8 +169,6 @@
 </div>
 
   
-
-
 <div class="offcanvas offcanvas-end" tabindex="-1" id="ExtralargeModalEdit" aria-labelledby="offcanvasRightLabel"
   style="width: 80%;"data-bs-backdrop="static" data-bs-keyboard="false">
   <div class="modal-header" style="padding: 15px; border-bottom: 1px solid #ccc;">
@@ -523,26 +516,16 @@
 </div>
 
 
-
 <!-- //form models -->
 
 <div class="offcanvas offcanvas-end" id="addLocation" aria-labelledby="offcanvasRightLabel" style="width: 80%;" data-bs-backdrop="static" data-bs-keyboard="false">
   <div class="modal-header" style="padding: 15px; border-bottom: 1px solid #ccc;">
     <h5 class="modal-title">Add Driver </h5>
-    <!-- <div>
-      <a href="javascript:;" class="font-14 text-success text-uppercase font-weight-500 me-4"><i
-          class="ri-save-3-line"></i> Save</a>
-      <a href="javascript:;" class="font-14 text-danger text-uppercase font-weight-500 me-4"><i
-          class="ri-delete-bin-6-line"></i> Delete</a>
-      <a routerLink="/driver-list-view" class="font-14 text-uppercase font-weight-500 me-5"
-        routerlinkactive="active">View Profile</a>-->
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-h2="Close"></button>
             
   </div>
   
   <!-- Your form inputs -->
-  
-  
   
   <div class="offcanvas-body view-load position-relative">
   
@@ -864,12 +847,6 @@
           </div>
       </div>
     
-
-
-
-
-
-  
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Controlled Substance & Alcohol
           <br>Questionnaire
